--- a/base/css/cw.css
+++ b/base/css/cw.css
@@ -33,7 +33,7 @@
   left: -24.3rem;
 }
 
-/* 교차로 통계 메인 */
+/* 횡단보도 통계 메인 */
 .main-stats-container .filter-grouop {
   margin-bottom: 3.25rem;
 }
@@ -219,12 +219,12 @@
   background: #e8e8e8;
 }
 
-/* 교차로 통계 */
+/* 횡단보도 통계 */
 .stats-container .filter-grouop {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  margin-bottom: 3.65rem;
+  margin-bottom: 2.75rem;
 }
 .stats-container .filter-grouop .btn-data-search:nth-last-child(2) {
   min-width: 13.1rem;
@@ -235,22 +235,21 @@
   color: #1e5f8d;
 }
 .stats-container > section h2 {
-  margin: 0 0 1.2rem 0.5rem;
-  padding-top: 2.1rem;
+  padding: 1rem 0.5rem;
+  line-height: normal;
   font-size: 1.8rem;
   color: #727272;
   font-weight: 700;
-}
-.stats-container > section h2:first-child {
-  padding-top: 0;
 }
 .stats-container > section .chart-container {
   border-radius: 0.5rem;
   background: #fff;
 }
 .stats-container .divide-none .chart-container {
-  height: 26.29rem;
+  height: 34.76rem;
   padding: 2.5rem 3rem;
+  -webkit-box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.05);
+          box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.05);
 }
 .stats-container .divide-2 {
   overflow-y: auto;
@@ -335,28 +334,59 @@
   overflow-y: auto;
   width: calc(100% + 0.4rem);
   height: 44rem;
-  margin-top: 2.1rem;
+  margin-top: 1rem;
 }
 .stats-container .divide-4::-webkit-scrollbar {
   width: 0.4rem;
 }
-.stats-container .divide-4.title-none {
-  width: 100%;
-  height: auto;
-  margin-top: 1rem;
+.stats-container .divide-4.sub-title-none {
+  height: 37.23rem;
 }
-.stats-container .divide-4.title-none > ul {
-  overflow-y: auto;
-  height: 44.5rem;
+.stats-container .divide-4.sub-title-none > ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+  gap: 0 1rem;
 }
-.stats-container .divide-4.title-none > ul::-webkit-scrollbar {
-  width: 0.4rem;
+.stats-container .divide-4.sub-title-none > ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+  gap: 0;
+  margin-top: 0;
 }
-.stats-container .divide-4.title-none > ul .chart-wrap {
-  width: 49.7%;
-  height: 21.5rem;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.stats-container .divide-4.sub-title-none > ul .chart-wrap {
+  height: 32.13rem;
+  padding: 2.5rem 3rem;
+}
+.stats-container .divide-4.sub-title-none > ul .chart-wrap .chart-container {
+  height: 26.1rem;
 }
 .stats-container .divide-4 li {
   display: -webkit-box;
@@ -2805,7 +2835,10 @@
   .stats-container .divide-2 li .chart-wrap .chart-container {
     width: 100%;
   }
+  .stats-container .divide-4.sub-title-none > ul li {
+    width: 49.6%;
+  }
   .stats-container .divide-4 li .chart-wrap {
-    width: 49.7%;
+    width: 100%;
   }
 }
