--- a/base/css/style.css
+++ b/base/css/style.css
@@ -591,6 +591,24 @@ body ::-webkit-scrollbar-track {
   background-position: 0 0;
   background-size: contain;
 }
+.ico-c {
+  display: inline-block;
+  width: 1.8rem;
+  height: 2.37rem;
+  background-image: url("/base/images/icon_branch_display1.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.ico-h {
+  display: inline-block;
+  width: 1.8rem;
+  height: 2.37rem;
+  background-image: url("/base/images/icon_branch_display2.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
 .ico-sudden1 {
   display: inline-block;
   width: 2.5rem;
@@ -5397,6 +5415,205 @@ body ::-webkit-scrollbar-track {
   width: 12.5rem;
   height: 12.5rem;
   margin: 0 auto;
+}
+
+/* 지점 목록 팝업 */
+.branch-list-popup {
+  position: absolute;
+  top: 2.5rem;
+  left: 2.2rem;
+  z-index: 1;
+  width: 31.7rem;
+  padding: 1.5rem;
+  background: #fff;
+  border-radius: 1rem;
+  -webkit-box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 2px 2px 8px 0px rgba(0, 0, 0, 0.25);
+}
+.branch-list-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  margin-bottom: 1.37rem;
+}
+.branch-list-header em {
+  line-height: normal;
+  color: #727272;
+  font-size: 2rem;
+  font-weight: 700;
+}
+.branch-list-header .btn-close {
+  width: 1.5rem;
+  height: 1.5rem;
+  background-image: url("/base/images/btn_close_gray2.png");
+}
+.branch-list-search {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  gap: 0 0.5rem;
+  margin-bottom: 0.7rem;
+}
+.branch-list-search .selectbox-wrap.xs select {
+  min-width: 7.5rem;
+  height: 2.7rem;
+  font-size: 1.4rem;
+  color: #999999;
+  border-color: #cbcbcb;
+  background-image: url("/base/images/arr_down_gray.png");
+}
+.branch-list-search .ui.input.rounded.xs {
+  position: relative;
+}
+.branch-list-search .ui.input.rounded.xs.active::before {
+  background-image: url("/base/images/icon_search_blue.png");
+  background-position: 0 -1px;
+}
+.branch-list-search .ui.input.rounded.xs.active input {
+  border-color: #5285aa;
+}
+.branch-list-search .ui.input.rounded.xs.active .btn-del {
+  display: block;
+}
+.branch-list-search .ui.input.rounded.xs::before {
+  content: "";
+  position: absolute;
+  top: 0.8rem;
+  left: 0.7rem;
+  width: 1rem;
+  height: 1rem;
+  background-image: url("/base/images/icon_search_gray.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.branch-list-search .ui.input.rounded.xs input {
+  padding: 0 2.3rem 0 2rem;
+  line-height: 2.5rem;
+  color: #3d3d3d;
+  font-size: 1.4rem;
+  font-weight: 500;
+}
+.branch-list-search .ui.input.rounded.xs .btn-del {
+  display: none;
+  position: absolute;
+  top: 0.8rem;
+  right: 0.7rem;
+  width: 1rem;
+  height: 1rem;
+  background-image: url("/base/images/btn_close_blue.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+}
+.branch-list-body {
+  overflow-y: auto;
+  width: 28.7rem;
+  height: 35.72rem;
+  border-radius: 0.5rem;
+  border: 1px solid #e8e8e8;
+}
+.branch-list-body::-webkit-scrollbar {
+  width: 0.4rem;
+}
+.branch-list-body li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  padding: 0.542rem 0.8rem;
+  border-bottom: 1px solid #e8e8e8;
+  -webkit-transition: background 0.2s;
+  transition: background 0.2s;
+}
+.branch-list-body li:hover {
+  background: #f8f8f8;
+}
+.branch-list-body li .txt {
+  width: 18.4rem;
+  margin-left: 0.5rem;
+  line-height: 1.7rem;
+  font-size: 1.4rem;
+  color: #727272;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: normal;
+}
+.branch-list-body li .bind {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  gap: 1.7rem;
+  margin-left: auto;
+}
+.branch-list-body li .bind .btn-branch1 {
+  width: 1rem;
+  height: 1.64rem;
+  background-image: url("/base/images/icon_maker.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
+  -webkit-transition: background 0.2s;
+  transition: background 0.2s;
+}
+.branch-list-body li .bind .btn-branch1:hover {
+  background-image: url("/base/images/icon_maker_active.png");
+}
+.branch-list-body li .bind .btn-branch2 {
+  width: 1.5rem;
+  height: 1.5rem;
+  background-image: url("/base/images/icon_view2.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: contain;
 }
 
 /*---------------------------------------------------------------
